# QemuArmCcaVMSetup

./: ArmCCA-VM.odp  README  prebuild.sh  qemu_launch_host.sh  qemu_rme_setup.py
shdir/arm-cca-kvm-realm-vm/: API-change  Cargo.toml  Makefile
shdir/arm-cca-kvm-realm-vm/src/: kvm_create.txt  main.rs
shdir/arm-cca-kvm-realm-vm/src/kernel/: .gdbinit  .gdbother  Makefile  README.md  arch_ops.s  common.h  defines.h  doc_exceptions.md  elf.h  errno.h  exception.S  exception_defines.h  execve.c  fd.c  fd.h  feature.c  handler.c  heap.c  heap.h  hypercall.c  hypercall.h  image_generator.c  init.S  init.s  kernel.h  linker.ld  linker.ld.in  linker.ld.static  linker_defines.h  main.c  memops.c  mm.s  pl011.h  process.h  psci.c  psci.h  relocations.c  rsi.c  rsi.h  stack.c  (+11 more)
shdir/arm-cca-kvm-realm-vm/src/user/: test.elf  test.s
ubuntu/: create_img.sh
ubuntu_img/: ubuntu_fs.sh
