[package]
name = "arm-cca-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.5"
byteorder = "1.5.0"
clap = { version = "4.4.10", features = ["derive", "env"] }
eventfd = "0.2.0"
gdbstub = "0.6.6"
gdbstub_arch = "0.2.4"
hex = "0.4.3"
kvm-bindings = "0.6.0"
kvm-ioctls = "0.13.0"
libc = "0.2.140"
nix = { version = "0.27.1", features = ["signal", "sched"] }
rawpointer = "0.2.1"
rlimit = "0.10.1"
vm-device = "0.1.0"
vm-memory = "0.10.0"
vmm-sys-util = "0.12.1"
